- update style - fix TODO - Fix review issue - add sass-loader and assets folder

--- a/src/assets/weather-summary.scss
+++ b/src/assets/weather-summary.scss
@@ -10,7 +10,6 @@ ol {
     border-right: 1px solid #ddd;
     padding: 10px;
     list-style-type: none;
-    display: flex;
     &:last-child {
       border: none;
     }
@@ -19,4 +18,11 @@ ol {
       background: #f1f1f1;
     }
   }
+}
+
+
+
+.active-city{
+  border: 2px solid $blue-400;
+  border-radius: 5px;
 }
