--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,3 +1,3 @@
 @import "~bootstrap";
-@import "weather-summary";
-@import "weather-table";
+@import "components/weather-summary";
+@import "components/weather-table";
